@@ -1,0 +1,2 @@
+Work with XML files using a simple, consistent interface. Built on top
+of the 'libxml2' C library.
